# dumbpipe

./: Cargo.toml  Dockerfile  build.rs  build.sh  config.toml  keep_alive.sh  start_cloud_portal.sh  start_remote_client.sh  start_server.sh  switch_route_entrypoint.sh  uniffi_build.sh
lte_array/: docker-compose.yaml
src/: lib.rs  main.rs  socks_server.rs
