[package]
name = "dumbpipe"
version = "0.27.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["netcat", "cli", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/dumbpipe"
description = "A cli tool to pipe data over the network, with NAT hole punching"
readme = "README.md"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.81"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
fast-socks5 = "1.0.0-rc.0"
hex = "0.4.3"
iroh = { version = "0.35", default-features = false }
iroh-base = { version = "0.35", features = ["ticket"] }
quinn = { version = "0.13", package = "iroh-quinn" }
rand = "0.8.5"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
vergen = "9.0.6"

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }